--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 *.exe
 *.out
 *.app
+Arrays/.vs/Arrays/v17/Browse.VC.db
+Arrays/.vs/Arrays/v17/Browse.VC.db
+Arrays/.vs/Arrays/v17/Browse.VC.db-shm
+Arrays/.vs/Arrays/v17/Browse.VC.db
+Arrays/.vs/Arrays/v17/Browse.VC.db-wal
+Arrays/.vs/Arrays/v17/Browse.VC.opendb
+Arrays/.vs/Arrays/v17/Browse.VC.db
